k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-prueba-tecnica
  labels:
    app.kubernetes.io/name: ns-prueba-tecnica
