k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ns-prueba-tecnica
  labels:
    app: backend
spec:
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: backend
