k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ns-prueba-tecnica
  labels:
    app: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: frontend
