k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ns-prueba-tecnica
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      name: mysql
  selector:
    app: mysql
